--- a/package.json
+++ b/package.json
@@ -22,20 +22,25 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@rpii/wdio-html-reporter": "^6.3.1",
-    "@wdio/allure-reporter": "^7.0.1",
-    "@wdio/cli": "^6.12.0",
-    "@wdio/local-runner": "^6.12.0",
-    "@wdio/mocha-framework": "^6.11.0",
-    "@wdio/spec-reporter": "^6.11.0",
-    "@wdio/sync": "^6.11.0",
+    "@rpii/wdio-html-reporter": "^6.4.0",
+    "@wdio/allure-reporter": "^7.14.1",
+    "@wdio/cli": "^7.14.1",
+    "@wdio/local-runner": "^7.14.1",
+    "@wdio/mocha-framework": "^7.14.1",
+    "@wdio/spec-reporter": "^7.14.1",
+    "@wdio/sync": "^7.14.1",
     "allure-commandline": "^2.13.8",
     "browserstack-local": "1.4.8",
     "chai": "4.3.3",
     "chromedriver": "^87.0.7",
     "lodash": "4.17.21",
     "wdio-chromedriver-service": "^6.0.4",
-    "wdio-docker-service": "^3.1.0",
+    "wdio-docker-service": "^3.1.4",
     "webdriverio": "7.2.2"
+  },
+  "dependencies": {
+    "fs": "0.0.1-security",
+    "path": "^0.12.7",
+    "sleep": "^6.3.0"
   }
 }
